--wip-- remove java17 syntax